--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -2,6 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "year,temperature,rainfall,mosquitos\r\n",
+      "2001,80,157,150\r\n",
+      "2002,85,252,217\r\n",
+      "2003,86,154,153\r\n",
+      "2004,87,159,158\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cat A1_mosquito_data.csv | head -n 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
