--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -25,12 +25,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A1_mosquito_data.csv  A3_mosquito_data.csv  B2_mosquito_data.csv\r\n",
+      "A2_mosquito_data.csv  B1_mosquito_data.csv\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "%ls *.csv"
+   ]
   }
  ],
  "metadata": {
