--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -45,12 +45,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "pd.read"
+   ]
   }
  ],
  "metadata": {
