--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -379,6 +379,15 @@
    "source": [
     "weight_lb"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
