--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -552,6 +552,61 @@
    "source": [
     "data[['rainfall', 'temperature']]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>mosquitos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>80</td>\n",
+       "      <td>157</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>85</td>\n",
+       "      <td>252</td>\n",
+       "      <td>217</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  temperature  rainfall  mosquitos\n",
+       "0  2001           80       157        150\n",
+       "1  2002           85       252        217"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[0:2]"
+   ]
   }
  ],
  "metadata": {
