--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -607,6 +607,13 @@
    "source": [
     "data[0:2]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This should be read as \"get all rows starting with 0 and up to but not including row 2\""
+   ]
   }
  ],
  "metadata": {
