--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -609,8 +609,21 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-59-0967c94af2db>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-59-0967c94af2db>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    This should be read as \"get all rows starting with 0 and up to but not including row 2\"\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "This should be read as \"get all rows starting with 0 and up to but not including row 2\""
    ]
