--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -618,6 +618,17 @@
     "\n",
     "$\\frac{1}{2}$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data"
+   ]
   }
  ],
  "metadata": {
