--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -711,7 +711,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A `DataFrame` "
+    "A `DataFrame` is made up of 1 or more `Series` objects as columns. Indexing a row gives back a `Series` giving the data of that row."
    ]
   }
  ],
