--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -713,6 +713,13 @@
    "source": [
     "A `DataFrame` is made up of 1 or more `Series` objects as columns. Indexing a row gives back a `Series` giving the data of that row."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A `Series` has a single `dtype` (datatype), so indexing a row may give back datatypes you didn't expect. Be careful."
+   ]
   }
  ],
  "metadata": {
