--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -720,6 +720,63 @@
    "source": [
     "A `Series` has a single `dtype` (datatype), so indexing a row may give back datatypes you didn't expect. Be careful."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2001,   80,  157,  150],\n",
+       "       [2002,   85,  252,  217],\n",
+       "       [2003,   86,  154,  153],\n",
+       "       [2004,   87,  159,  158],\n",
+       "       [2005,   74,  292,  243],\n",
+       "       [2006,   75,  283,  237],\n",
+       "       [2007,   80,  214,  190],\n",
+       "       [2008,   85,  197,  181],\n",
+       "       [2009,   74,  231,  200],\n",
+       "       [2010,   74,  207,  184]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year           int64\n",
+       "temperature    int64\n",
+       "rainfall       int64\n",
+       "mosquitos      int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.dtypes"
+   ]
   }
  ],
  "metadata": {
