--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -777,6 +777,28 @@
    "source": [
     "data.dtypes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dtype('int64')"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.values.dtype"
+   ]
   }
  ],
  "metadata": {
