--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -829,41 +829,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2001</td>\n",
-       "      <td>80</td>\n",
-       "      <td>157</td>\n",
-       "      <td>150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2002</td>\n",
-       "      <td>85</td>\n",
-       "      <td>252</td>\n",
-       "      <td>217</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2003</td>\n",
-       "      <td>86</td>\n",
-       "      <td>154</td>\n",
-       "      <td>153</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2004</td>\n",
-       "      <td>87</td>\n",
-       "      <td>159</td>\n",
-       "      <td>158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>74</td>\n",
-       "      <td>292</td>\n",
-       "      <td>243</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2006</td>\n",
@@ -905,11 +870,6 @@
       ],
       "text/plain": [
        "   year  temperature  rainfall  mosquitos\n",
-       "0  2001           80       157        150\n",
-       "1  2002           85       252        217\n",
-       "2  2003           86       154        153\n",
-       "3  2004           87       159        158\n",
-       "4  2005           74       292        243\n",
        "5  2006           75       283        237\n",
        "6  2007           80       214        190\n",
        "7  2008           85       197        181\n",
@@ -917,13 +877,13 @@
        "9  2010           74       207        184"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data[data['year'] > ]"
+    "data[data['year'] > 2005]"
    ]
   }
  ],
