--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -923,6 +923,33 @@
    "source": [
     "data['year'][greater_than_05]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5    2006\n",
+       "6    2007\n",
+       "7    2008\n",
+       "8    2009\n",
+       "9    2010\n",
+       "Name: year, dtype: int64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.year[greater_than_05]"
+   ]
   }
  ],
  "metadata": {
