--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -925,6 +925,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the same as the convenience form below:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 72,
    "metadata": {
@@ -950,6 +957,15 @@
    "source": [
     "data.year[greater_than_05]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
