--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -960,12 +960,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year           2005.5\n",
+       "temperature      80.0\n",
+       "rainfall        214.6\n",
+       "mosquitos       191.3\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.mean()"
+   ]
   }
  ],
  "metadata": {
