--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -983,6 +983,30 @@
    "source": [
     "data.mean()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rainfall     214.6\n",
+       "mosquitos    191.3\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[['rainfall', 'mosquitos']].mean()"
+   ]
   }
  ],
  "metadata": {
