--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1139,13 +1139,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count      10.00000\n",
+       "mean     2005.50000\n",
+       "std         3.02765\n",
+       "min      2001.00000\n",
+       "25%      2003.25000\n",
+       "50%      2005.50000\n",
+       "75%      2007.75000\n",
+       "max      2010.00000\n",
+       "Name: year, dtype: float64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data.describe()['']"
+    "data.describe()['year']"
    ]
   }
  ],
