--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -1147,24 +1147,16 @@
     {
      "data": {
       "text/plain": [
-       "count      10.00000\n",
-       "mean     2005.50000\n",
-       "std         3.02765\n",
-       "min      2001.00000\n",
-       "25%      2003.25000\n",
-       "50%      2005.50000\n",
-       "75%      2007.75000\n",
-       "max      2010.00000\n",
-       "Name: year, dtype: float64"
+       "2003.25"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.describe()['year']"
+    "data.describe()['year']['25%']"
    ]
   }
  ],
