--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1158,6 +1158,17 @@
    "source": [
     "data.describe()['year']['25%']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data.describe?"
+   ]
   }
  ],
  "metadata": {
