--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1161,13 +1161,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "data.describe?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "type?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method describe in module pandas.core.generic:\n",
+      "\n",
+      "describe(percentiles=None, include=None, exclude=None) method of pandas.core.frame.DataFrame instance\n",
+      "    Generate various summary statistics, excluding NaN values.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    percentiles : array-like, optional\n",
+      "        The percentiles to include in the output. Should all\n",
+      "        be in the interval [0, 1]. By default `percentiles` is\n",
+      "        [.25, .5, .75], returning the 25th, 50th, and 75th percentiles.\n",
+      "    include, exclude : list-like, 'all', or None (default)\n",
+      "        Specify the form of the returned result. Either:\n",
+      "    \n",
+      "        - None to both (default). The result will include only\n",
+      "          numeric-typed columns or, if none are, only categorical columns.\n",
+      "        - A list of dtypes or strings to be included/excluded.\n",
+      "          To select all numeric types use numpy numpy.number. To select\n",
+      "          categorical objects use type object. See also the select_dtypes\n",
+      "          documentation. eg. df.describe(include=['O'])\n",
+      "        - If include is the string 'all', the output column-set will\n",
+      "          match the input one.\n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    summary: NDFrame of summary statistics\n",
+      "    \n",
+      "    Notes\n",
+      "    -----\n",
+      "    The output DataFrame index depends on the requested dtypes:\n",
+      "    \n",
+      "    For numeric dtypes, it will include: count, mean, std, min,\n",
+      "    max, and lower, 50, and upper percentiles.\n",
+      "    \n",
+      "    For object dtypes (e.g. timestamps or strings), the index\n",
+      "    will include the count, unique, most common, and frequency of the\n",
+      "    most common. Timestamps also include the first and last items.\n",
+      "    \n",
+      "    For mixed dtypes, the index will be the union of the corresponding\n",
+      "    output types. Non-applicable entries will be filled with NaN.\n",
+      "    Note that mixed-dtype outputs can only be returned from mixed-dtype\n",
+      "    inputs and appropriate use of the include/exclude arguments.\n",
+      "    \n",
+      "    If multiple values have the highest count, then the\n",
+      "    `count` and `most common` pair will be arbitrarily chosen from\n",
+      "    among those with the highest count.\n",
+      "    \n",
+      "    The include, exclude arguments are ignored for Series.\n",
+      "    \n",
+      "    See Also\n",
+      "    --------\n",
+      "    DataFrame.select_dtypes\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(data.describe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data.describe()"
    ]
   }
  ],
