--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1262,6 +1262,13 @@
    "source": [
     "data.describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Challenge: obtain the standard deviation of mosquito count for years in which the rainfall was greater than 200"
+   ]
   }
  ],
  "metadata": {
