--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1269,6 +1269,17 @@
    "source": [
     "### Challenge: obtain the standard deviation of mosquito count for years in which the rainfall was greater than 200"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data[]"
+   ]
   }
  ],
  "metadata": {
