--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1272,13 +1272,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>mosquitos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>85</td>\n",
+       "      <td>252</td>\n",
+       "      <td>217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>75</td>\n",
+       "      <td>283</td>\n",
+       "      <td>237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>85</td>\n",
+       "      <td>197</td>\n",
+       "      <td>181</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  temperature  rainfall  mosquitos\n",
+       "1  2002           85       252        217\n",
+       "5  2006           75       283        237\n",
+       "7  2008           85       197        181"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "data[]"
+    "data.iloc[[1, 5, 7]]"
    ]
   }
  ],
