--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1332,6 +1332,15 @@
    "source": [
     "data.iloc[[1, 5, 7]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
