--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1272,12 +1272,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24.587937421969063"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['mosquitos'][data['rainfall'] > 200].std()"
+   ]
   }
  ],
  "metadata": {
