--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1291,6 +1291,13 @@
    "source": [
     "data['mosquitos'][data['rainfall'] > 200].std()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Coffee time! Be back here at 2:48"
+   ]
   }
  ],
  "metadata": {
