--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1296,7 +1296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Coffee time! Be back here at 2:48"
+    "## Coffee time! Be back here at 2:48"
    ]
   }
  ],
