--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1364,6 +1364,15 @@
     "# how can I extract specific rows by index?\n",
     "data.iloc[[1, 5, 7]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
