--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1367,12 +1367,78 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    26.666667\n",
+       "1    29.444444\n",
+       "2    30.000000\n",
+       "3    30.555556\n",
+       "4    23.333333\n",
+       "5    23.888889\n",
+       "6    26.666667\n",
+       "7    29.444444\n",
+       "8    23.333333\n",
+       "9    23.333333\n",
+       "Name: temperature, dtype: float64"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(data['temperature'] - 32) * 5/9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    400\n",
+       "1    425\n",
+       "2    430\n",
+       "3    435\n",
+       "4    370\n",
+       "5    375\n",
+       "6    400\n",
+       "7    425\n",
+       "8    370\n",
+       "9    370\n",
+       "Name: temperature, dtype: int64"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['temperature'] * 5"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "data[]"
+   ]
   }
  ],
  "metadata": {
