--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -1861,6 +1861,363 @@
    "source": [
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_reoardered = data[['rainfall', 'temperature', 'year', 'mosquitos']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>year</th>\n",
+       "      <th>mosquitos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>157</td>\n",
+       "      <td>26.666667</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>252</td>\n",
+       "      <td>29.444444</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>154</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>159</td>\n",
+       "      <td>30.555556</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>292</td>\n",
+       "      <td>23.333333</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>283</td>\n",
+       "      <td>23.888889</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>214</td>\n",
+       "      <td>26.666667</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>197</td>\n",
+       "      <td>29.444444</td>\n",
+       "      <td>2008</td>\n",
+       "      <td>181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>231</td>\n",
+       "      <td>23.333333</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>207</td>\n",
+       "      <td>23.333333</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>184</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   rainfall  temperature  year  mosquitos\n",
+       "0       157    26.666667  2001        150\n",
+       "1       252    29.444444  2002        217\n",
+       "2       154    30.000000  2003        153\n",
+       "3       159    30.555556  2004        158\n",
+       "4       292    23.333333  2005        243\n",
+       "5       283    23.888889  2006        237\n",
+       "6       214    26.666667  2007        190\n",
+       "7       197    29.444444  2008        181\n",
+       "8       231    23.333333  2009        200\n",
+       "9       207    23.333333  2010        184"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_reoardered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>mosquitos</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2001</td>\n",
+       "      <td>26.666667</td>\n",
+       "      <td>157</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>29.444444</td>\n",
+       "      <td>252</td>\n",
+       "      <td>217</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2003</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>154</td>\n",
+       "      <td>153</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2004</td>\n",
+       "      <td>30.555556</td>\n",
+       "      <td>159</td>\n",
+       "      <td>158</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2005</td>\n",
+       "      <td>23.333333</td>\n",
+       "      <td>292</td>\n",
+       "      <td>243</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2006</td>\n",
+       "      <td>23.888889</td>\n",
+       "      <td>283</td>\n",
+       "      <td>237</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>26.666667</td>\n",
+       "      <td>214</td>\n",
+       "      <td>190</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2008</td>\n",
+       "      <td>29.444444</td>\n",
+       "      <td>197</td>\n",
+       "      <td>181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>23.333333</td>\n",
+       "      <td>231</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2010</td>\n",
+       "      <td>23.333333</td>\n",
+       "      <td>207</td>\n",
+       "      <td>184</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  temperature  rainfall  mosquitos\n",
+       "0  2001    26.666667       157        150\n",
+       "1  2002    29.444444       252        217\n",
+       "2  2003    30.000000       154        153\n",
+       "3  2004    30.555556       159        158\n",
+       "4  2005    23.333333       292        243\n",
+       "5  2006    23.888889       283        237\n",
+       "6  2007    26.666667       214        190\n",
+       "7  2008    29.444444       197        181\n",
+       "8  2009    23.333333       231        200\n",
+       "9  2010    23.333333       207        184"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mosquitos</th>\n",
+       "      <th>mosquitos</th>\n",
+       "      <th>rainfall</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>150</td>\n",
+       "      <td>150</td>\n",
+       "      <td>157</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>217</td>\n",
+       "      <td>217</td>\n",
+       "      <td>252</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>153</td>\n",
+       "      <td>153</td>\n",
+       "      <td>154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>158</td>\n",
+       "      <td>158</td>\n",
+       "      <td>159</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>243</td>\n",
+       "      <td>243</td>\n",
+       "      <td>292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>237</td>\n",
+       "      <td>237</td>\n",
+       "      <td>283</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>190</td>\n",
+       "      <td>190</td>\n",
+       "      <td>214</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>181</td>\n",
+       "      <td>181</td>\n",
+       "      <td>197</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>200</td>\n",
+       "      <td>200</td>\n",
+       "      <td>231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>184</td>\n",
+       "      <td>184</td>\n",
+       "      <td>207</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   mosquitos  mosquitos  rainfall\n",
+       "0        150        150       157\n",
+       "1        217        217       252\n",
+       "2        153        153       154\n",
+       "3        158        158       159\n",
+       "4        243        243       292\n",
+       "5        237        237       283\n",
+       "6        190        190       214\n",
+       "7        181        181       197\n",
+       "8        200        200       231\n",
+       "9        184        184       207"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[['mosquitos', 'mosquitos', 'rainfall']]"
+   ]
   }
  ],
  "metadata": {
