--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -2218,6 +2218,13 @@
    "source": [
     "data[['mosquitos', 'mosquitos', 'rainfall']]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plotting data from a DataFrame"
+   ]
   }
  ],
  "metadata": {
