--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -2225,6 +2225,17 @@
    "source": [
     "## Plotting data from a DataFrame"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data."
+   ]
   }
  ],
  "metadata": {
