--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -2228,6 +2228,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('A1_mosquito_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 125,
    "metadata": {
     "collapsed": true
