--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -2495,6 +2495,28 @@
    "source": [
     "data['mosquitos'].plot.kde()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=(4, 6))"
+   ]
   }
  ],
  "metadata": {
