--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -2515,7 +2515,12 @@
    },
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(4, 6))"
+    "fig = plt.figure(figsize=(4, 6))\n",
+    "\n",
+    "ax1 = fig.add_subplot(2, 1, 1)\n",
+    "\n",
+    "ax1.plot(data['year'], data['temperature'], 'ro-')\n",
+    "ax1.set_xlabel('year')\n"
    ]
   }
  ],
