--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -2550,6 +2550,22 @@
     "ax2.set_xlabel('year')\n",
     "ax2.set_ylabel('rainfall')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Challenge: plot the relationship between the number of mosquitos and temperature and the number of mosquitos and rainfall"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
