--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3001,6 +3001,51 @@
     "for item in stuff:\n",
     "    print(item)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['chewbacca', 'chickenfingers']"
+      ]
+     },
+     "execution_count": 172,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stuff[1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['chewbacca', 'chickenfingers']"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# negative numbers start at the end of the sequence\n",
+    "stuff[-2:]"
+   ]
   }
  ],
  "metadata": {
