--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3046,6 +3046,28 @@
     "# negative numbers start at the end of the sequence\n",
     "stuff[-2:]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'chickenfingers'"
+      ]
+     },
+     "execution_count": 174,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stuff[-1]"
+   ]
   }
  ],
  "metadata": {
