--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3095,7 +3095,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lists are mutable; I can change the elements"
+    "lists are mutable; I can change the elements of the list to point to new objects"
    ]
   },
   {
