--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3301,7 +3301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 188,
    "metadata": {
     "collapsed": false
    },
@@ -3309,7 +3309,29 @@
     {
      "data": {
       "text/plain": [
-       "['marklar',     year  temperature  rainfall  mosquitos\n",
+       "'marklar'"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stuff[-1].pop(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[    year  temperature  rainfall  mosquitos\n",
        " 0   1960           82       200        180\n",
        " 1   1961           70       227        194\n",
        " 2   1962           89       231        207\n",
@@ -3360,16 +3382,89 @@
        " 47  2007           79       262        221\n",
        " 48  2008           73       198        176\n",
        " 49  2009           86       215        187\n",
-       " 50  2010           87       127        129, 'chickenfingers', [...]]"
+       " 50  2010           87       127        129, 'chickenfingers']"
       ]
      },
-     "execution_count": 186,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stuff[-1][-1][-1][-1]"
+    "stuff.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[    year  temperature  rainfall  mosquitos\n",
+       " 0   1960           82       200        180\n",
+       " 1   1961           70       227        194\n",
+       " 2   1962           89       231        207\n",
+       " 3   1963           74       114        121\n",
+       " 4   1964           78       147        140\n",
+       " 5   1965           85       151        148\n",
+       " 6   1966           86       172        162\n",
+       " 7   1967           75       106        112\n",
+       " 8   1968           70       276        230\n",
+       " 9   1969           86       165        162\n",
+       " 10  1970           83       222        198\n",
+       " 11  1971           78       297        247\n",
+       " 12  1972           87       288        248\n",
+       " 13  1973           76       286        239\n",
+       " 14  1974           86       231        202\n",
+       " 15  1975           90       284        243\n",
+       " 16  1976           76       190        175\n",
+       " 17  1977           87       257        225\n",
+       " 18  1978           88       128        133\n",
+       " 19  1979           87       218        199\n",
+       " 20  1980           81       206        184\n",
+       " 21  1981           74       175        160\n",
+       " 22  1982           85       202        187\n",
+       " 23  1983           71       130        126\n",
+       " 24  1984           80       225        200\n",
+       " 25  1985           72       196        173\n",
+       " 26  1986           76       261        222\n",
+       " 27  1987           85       111        121\n",
+       " 28  1988           83       247        210\n",
+       " 29  1989           86       137        142\n",
+       " 30  1990           82       159        152\n",
+       " 31  1991           77       172        160\n",
+       " 32  1992           74       280        231\n",
+       " 33  1993           70       291        238\n",
+       " 34  1994           77       126        125\n",
+       " 35  1995           89       191        178\n",
+       " 36  1996           83       298        248\n",
+       " 37  1997           80       282        237\n",
+       " 38  1998           86       219        195\n",
+       " 39  1999           72       143        134\n",
+       " 40  2000           79       262        221\n",
+       " 41  2001           85       189        175\n",
+       " 42  2002           86       205        186\n",
+       " 43  2003           72       195        173\n",
+       " 44  2004           78       148        146\n",
+       " 45  2005           71       262        219\n",
+       " 46  2006           88       255        226\n",
+       " 47  2007           79       262        221\n",
+       " 48  2008           73       198        176\n",
+       " 49  2009           86       215        187\n",
+       " 50  2010           87       127        129, 'chickenfingers']"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stuff"
    ]
   }
  ],
