--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3451,19 +3451,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 198,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a = 3\n",
-    "b = 3"
+    "a = ['marklar']\n",
+    "b = ['marklar']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 199,
    "metadata": {
     "collapsed": false
    },
@@ -3471,10 +3471,10 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
