--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3570,6 +3570,13 @@
    "source": [
     "b"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot all the data"
+   ]
   }
  ],
  "metadata": {
