--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3577,6 +3577,17 @@
    "source": [
     "## Plot all the data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import glob"
+   ]
   }
  ],
  "metadata": {
