--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3588,6 +3588,39 @@
    "source": [
     "import glob"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A1_mosquito_data.csv',\n",
+       " 'A3_mosquito_data.csv',\n",
+       " 'B2_mosquito_data.csv',\n",
+       " 'A2_mosquito_data.csv',\n",
+       " 'B1_mosquito_data.csv']"
+      ]
+     },
+     "execution_count": 205,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "glob.glob('*.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Challenge: write a for-loop that produces a plot of mosquito population vs. temperature and mosqu"
+   ]
   }
  ],
  "metadata": {
