--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3619,7 +3619,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Challenge: write a for-loop that produces a plot of mosquito population vs. temperature and mosqu"
+    "## Challenge: write a for-loop that produces a plot of mosquito population vs. temperature and mosquito population vs. rainfall for each dataset."
    ]
   }
  ],
