--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3575,7 +3575,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot all the data"
+    "## Plot all the data!"
    ]
   },
   {
