--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3621,6 +3621,38 @@
    "source": [
     "## Challenge: write a for-loop that produces a plot of mosquito population vs. temperature and mosquito population vs. rainfall for each dataset."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# grab all the CSV filenames\n",
+    "filenames = glob.glob('*.csv')\n",
+    "\n",
+    "for filename in filenames:\n",
+    "    \n",
+    "    # read data from disk into a DataFrame\n",
+    "    data = pd.read_csv(filename)\n",
+    "    \n",
+    "    # make multi-panel plot\n",
+    "    fig = plt.figure(figsize=(4, 6))\n",
+    "\n",
+    "    ax1 = fig.add_subplot(2, 1, 1)\n",
+    "\n",
+    "    ax1.plot(data['temperature'], data['mosquitos'], 'ro')\n",
+    "    ax1.set_xlabel('temperature')\n",
+    "    ax1.set_ylabel('mosquitos')\n",
+    "\n",
+    "    ax2 = fig.add_subplot(2, 1, 2)\n",
+    "\n",
+    "    ax2.plot(data['rainfall'], data['mosquitos'], 'bs')\n",
+    "    ax2.set_xlabel('rainfall')\n",
+    "    ax2.set_ylabel('mosquitos')"
+   ]
   }
  ],
  "metadata": {
