--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -3750,6 +3750,15 @@
     "    \n",
     "    fig.savefig(filename + '.png', dpi=300)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
