--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4300,7 +4300,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "sm.OLS()"
+   ]
   }
  ],
  "metadata": {
