--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4481,6 +4481,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "data['temperature'] = (data['temperature'] - 32) * 5/9"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {
     "collapsed": false
