--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4613,6 +4613,42 @@
    "source": [
     "regr_results.summary()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Intercept      17.545739\n",
+       "temperature     0.871943\n",
+       "rainfall        0.696717\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regr_results.params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "regr_results."
+   ]
   }
  ],
  "metadata": {
