--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4616,6 +4616,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "regr_results.summary?"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {
     "collapsed": false
@@ -4674,12 +4685,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "figure = plt.figure()\n",
+    "\n",
+    "ax = "
+   ]
   }
  ],
  "metadata": {
