--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4705,7 +4705,10 @@
    "source": [
     "figure = plt.figure()\n",
     "\n",
-    "ax = "
+    "ax = figure.add_subplot(1, 1, 1)\n",
+    "\n",
+    "parameters = regr_results.params\n",
+    "predicted = parameters['Intercept'] + parameters['temperature'] * data['temperature'] + parameters['rainfall'] * d"
    ]
   }
  ],
