--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4741,12 +4741,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Intercept        6.341405\n",
+       "temperature      9.456614\n",
+       "rainfall       125.385116\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regr_results.tvalues"
+   ]
   }
  ],
  "metadata": {
