--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4763,6 +4763,13 @@
    "source": [
     "regr_results.tvalues"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Challenge: for each dataset, print the t-value for temperature and rainfall, and plot the statsmodel results along with plots for the relationship between mosquitos and temperature and mosquitos and rainfall separately"
+   ]
   }
  ],
  "metadata": {
