--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4768,7 +4768,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Challenge: for each dataset, print the t-value for temperature and rainfall, and plot the statsmodel results along with plots for the relationship between mosquitos and temperature and mosquitos and rainfall separately"
+    "## Challenge: for each dataset, print the t-value for temperature and rainfall, and plot the statsmodel results (predicted vs. measured mosquito population) along with plots for the relationship between mosquitos and temperature and mosquitos and rainfall separately"
    ]
   }
  ],
