--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4770,6 +4770,32 @@
    "source": [
     "## Challenge: for each dataset, print the t-value for temperature and rainfall, and plot the statsmodel results (predicted vs. measured mosquito population) along with plots for the relationship between mosquitos and temperature and mosquitos and rainfall separately"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "imporg \n",
+    "\n",
+    "\n",
+    "figure = plt.figure()\n",
+    "\n",
+    "ax = figure.add_subplot(1, 1, 1)\n",
+    "\n",
+    "parameters = regr_results.params\n",
+    "predicted = (parameters['Intercept'] + \n",
+    "             parameters['temperature'] * data['temperature'] + \n",
+    "             parameters['rainfall'] * data['rainfall'])\n",
+    "\n",
+    "ax.plot(predicted, data['mosquitos'], 'ro')\n",
+    "\n",
+    "ax.set_xlabel('predicted mosquito population')\n",
+    "ax.set_ylabel('measured mosquito population')"
+   ]
   }
  ],
  "metadata": {
