--- a/Mosquitoes.ipynb
+++ b/Mosquitoes.ipynb
@@ -4779,22 +4779,46 @@
    },
    "outputs": [],
    "source": [
-    "imporg \n",
+    "import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "filenames = glob.glob('*.csv')\n",
     "\n",
+    "for filename in filenames:\n",
+    "    \n",
+    "    print(filename)\n",
+    "    data = pd.read_csv(filename)\n",
+    "    \n",
+    "    # convert temperatures to celsius from fahrenheit\n",
+    "    data['temperature'] = (data['temperature'] - 32) * 5/9\n",
+    "    \n",
+    "    # perform fit\n",
+    "    regr_results = sm.OLS.from_formula('mosquitos ~ temperature + rainfall', data).fit()\n",
+    "    print(regr_results.tvalues)\n",
+    "    \n",
+    "    #\n",
     "\n",
-    "figure = plt.figure()\n",
+    "    figure = plt.figure()\n",
     "\n",
-    "ax = figure.add_subplot(1, 1, 1)\n",
+    "    ax = figure.add_subplot(1, 1, 1)\n",
     "\n",
-    "parameters = regr_results.params\n",
-    "predicted = (parameters['Intercept'] + \n",
-    "             parameters['temperature'] * data['temperature'] + \n",
-    "             parameters['rainfall'] * data['rainfall'])\n",
+    "    parameters = regr_results.params\n",
+    "    predicted = (parameters['Intercept'] + \n",
+    "                 parameters['temperature'] * data['temperature'] + \n",
+    "                 parameters['rainfall'] * data['rainfall'])\n",
     "\n",
-    "ax.plot(predicted, data['mosquitos'], 'ro')\n",
+    "    ax.plot(predicted, data['mosquitos'], 'ro')\n",
     "\n",
-    "ax.set_xlabel('predicted mosquito population')\n",
-    "ax.set_ylabel('measured mosquito population')"
+    "    ax.set_xlabel('predicted mosquito population')\n",
+    "    ax.set_ylabel('measured mosquito population')"
    ]
   }
  ],
